@@ -1,6 +1,5 @@
 package ebsystem.set.equalizer;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.Test;
 
 import java.util.List;
@@ -8,8 +7,8 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class BestMoveFinderTest {
-    private final List<Integer> listA = ImmutableList.of(3, 12, 5);
-    private final List<Integer> listB = ImmutableList.of(10, 1, 2, 5, 9);
+    private final List<Integer> listA = List.of(3, 12, 5);
+    private final List<Integer> listB = List.of(10, 1, 2, 5, 9);
     private final BestMoveFinder bestMoveFinder = new BestMoveFinder();
 
     @Test
